--- a/api/.github/workflows/deploy.yml
+++ b/api/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to Fly.io
 on:
   push:
     branches:
-      - main
+      - AditiSachan
 
 jobs:
   deploy:
@@ -14,6 +14,7 @@ jobs:
         uses: superfly/flyctl-actions/setup-flyctl@master
 
       - name: Deploy to Fly.io
+        working-directory: ./api
         run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
