--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -113,17 +113,23 @@ ENV LLVM_DIR=${HOME}/SVF/llvm-$llvm_version.obj
 ENV Z3_DIR=${HOME}/SVF/z3.obj
 RUN ln -s ${Z3_DIR}/bin/libz3.so ${Z3_DIR}/bin/libz3.so.4
 
-# Final runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:8.0@sha256:6c4df091e4e531bb93bdbfe7e7f0998e7ced344f54426b7e874116a3dc3233ff
+# Final runtime image - change to Ubuntu 24.04
+FROM ubuntu:24.04
 
-# Install runtime dependencies
+# Install .NET runtime on Ubuntu
 RUN apt-get update && apt-get install -y \
+    wget \
+    apt-transport-https \
+    && wget https://packages.microsoft.com/config/ubuntu/24.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb \
+    && dpkg -i packages-microsoft-prod.deb \
+    && apt-get update \
+    && apt-get install -y dotnet-runtime-8.0 \
     libxml2 \
     libncurses5 \
     libzstd1 \
     libssl3 \
     && rm -rf /var/lib/apt/lists/*
-    
+
 # Set the working directory for the runtime image
 WORKDIR /App
 EXPOSE 8080
