--- a/api/fly.toml
+++ b/api/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for api-misty-resonance-369 on 2025-03-31T14:23:19+11:00
+# fly.toml app configuration file generated for api-misty-wind-7167 on 2025-03-31T23:19:08+11:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'api-misty-resonance-369'
+app = 'api-misty-wind-7167'
 primary_region = 'syd'
 
 [build]
@@ -18,4 +18,6 @@ primary_region = 'syd'
   processes = ['app']
 
 [[vm]]
-  size = 'performance-1x'
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
