--- a/api/fly.toml
+++ b/api/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for api-still-paper-7120 on 2025-05-03T20:10:58+10:00
+# fly.toml app configuration file generated for api-hidden-feather-7401 on 2025-05-13T01:05:48+10:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'api-still-paper-7120'
+app = 'api-hidden-feather-7401'
 primary_region = 'syd'
 
 [build]
@@ -18,6 +18,6 @@ primary_region = 'syd'
   processes = ['app']
 
 [[vm]]
-  memory = '1gb'
+  memory = '2gb'
   cpu_kind = 'shared'
   cpus = 1
