trying the new deployed dockerfile

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -51,6 +51,7 @@
 
 
 
+# Build .NET app
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 COPY *.csproj ./
@@ -58,13 +59,16 @@ RUN dotnet restore
 COPY . .
 RUN dotnet publish -c Release -o /out
 
+# Runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 EXPOSE 8080
 
+# Copy published app
 COPY --from=build /out .
 
-# Prebuilt SVF (from your project directory)
+# ✅ Copy local prebuilt SVF files
 COPY ./SVF-prebuilt /app/SVF
 
+# Start API
 ENTRYPOINT ["dotnet", "api.dll"]
