Changed dockerfile to not clone SVF, instead use its docker image

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -51,24 +51,31 @@
 
 
 
-# Build .NET app
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-WORKDIR /src
+# Stage 1: Build the .NET app
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
+WORKDIR /App
+
 COPY *.csproj ./
 RUN dotnet restore
-COPY . .
-RUN dotnet publish -c Release -o /out
 
-# Runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
-WORKDIR /app
-EXPOSE 8080
+COPY . ./
+RUN dotnet publish -c Release -o out
 
-# Copy published app
-COPY --from=build /out .
+# Stage 2: Runtime + SVF
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 
-# ✅ Copy local prebuilt SVF files
-COPY ./SVF-prebuilt /app/SVF
+# Copy SVF tools from the published image
+FROM ghcr.io/aditisachan/svf:latest AS svfstage
 
-# Start API
+# Target image
+FROM final
+WORKDIR /App
+
+COPY --from=svfstage /home/SVF-tools/SVF /App/SVF
+
+# Install dependencies (adjust as needed)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    clang cmake git wget libz-dev libzstd-dev libtinfo5 \
+    && rm -rf /var/lib/apt/lists/*
+
 ENTRYPOINT ["dotnet", "api.dll"]
