--- a/api/fly.toml
+++ b/api/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for api-long-brook-8655 on 2025-05-25T23:38:13+10:00
+# fly.toml app configuration file generated for api-spring-cloud-3523 on 2025-06-07T21:12:12+10:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'api-long-brook-8655'
+app = 'api-spring-cloud-3523'
 primary_region = 'syd'
 
 [build]
