--- a/api/fly.toml
+++ b/api/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for api-spring-cloud-3523 on 2025-06-07T21:12:12+10:00
+# fly.toml app configuration file generated for api-broken-moon-5814 on 2025-05-26T02:48:04+10:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'api-spring-cloud-3523'
+app = 'api-broken-moon-5814'
 primary_region = 'syd'
 
 [build]
@@ -18,6 +18,6 @@ primary_region = 'syd'
   processes = ['app']
 
 [[vm]]
-  memory = '2gb'
+  memory = '16gb'
   cpu_kind = 'shared'
   cpus = 1
