IT WORKSgit add --all

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,5 +1,6 @@
-# Stage 1: Build the .NET app
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
+# Build Stage
+FROM mcr.microsoft.com/dotnet/sdk:8.0@sha256:35792ea4ad1db051981f62b313f1be3b46b1f45cadbaa3c288cd0d3056eefb83 AS build-env
+
 WORKDIR /App
 
 COPY *.csproj ./
@@ -8,21 +9,21 @@ RUN dotnet restore
 COPY . ./
 RUN dotnet publish -c Release -o out
 
-# Stage 2: Runtime + SVF
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
+# Final Runtime Stage using your SVF base image
+FROM ghcr.io/aditisachan/svf:latest
 
-# Copy SVF tools from the published image
-FROM ghcr.io/aditisachan/svf:latest AS svfstage
-
-# Target image
-FROM final
 WORKDIR /App
+EXPOSE 8080
 
-COPY --from=svfstage /home/SVF-tools/SVF /App/SVF
+# Install required packages (including clang)
+RUN apt-get install -y --no-install-recommends \
+    clang libtinfo6 libz-dev libzstd-dev zip libncurses5-dev xz-utils unzip make
 
-# Install dependencies (adjust as needed)
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    clang cmake git wget libz-dev libzstd-dev libtinfo5 \
-    && rm -rf /var/lib/apt/lists/*
+# Set LLVM library path if needed
+ENV LD_LIBRARY_PATH=/App/SVF/Release-build/lib:$LD_LIBRARY_PATH
 
+# Copy published .NET app from build stage
+COPY --from=build-env /App/out .
+
+# Set entrypoint
 ENTRYPOINT ["dotnet", "api.dll"]
